<resources>
    <string name="app_name">Quiz App</string>
    <string name="welcometxt">Welcome</string>
    <string name="enterName">Please Enter Your Name</string>
    <string name="uname">Username</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="start">Start</string>
    <string name="_0_20">0/20</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="check">Check</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="result">Result</string>
    <string name="image">Image</string>
    <string name="congratulations">Congratulations!</string>
    <string name="username">Username</string>
    <string name="your_score_is_9_out_of_10">Your Score is 9 out of 10</string>
    <string name="categories">Categories</string>
    <string name="submission_successfully">Submission Successful!</string>
    <string name="error_submission_failed">Error Submission Failed!</string>
    <string name="hint_email">Email</string>
    <string name="gotologin">Go To Login</string>
    <string name="gotoregister">Go To Register</string>
    <string name="loginhere">User Login</string>
    <string name="usersignup">New User Registration</string>
</resources>