<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Result_Activity"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="55dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/titleRes"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_marginTop="45dp"
        android:text="@string/result"
        android:gravity="center"/>
    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/trophyicon"
        android:id="@+id/imgTrophy"
        android:contentDescription="@string/image"
        android:layout_marginTop="35dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/congo"
        android:text="@string/congratulations"
        android:textSize="25sp"
        android:layout_marginTop="35dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/uname"
        android:text="@string/username"
        android:textSize="22sp"
        android:layout_marginTop="25dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/score"
        android:text="@string/your_score_is_9_out_of_10"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        android:textColor="@color/white"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:text="@string/finish"
        android:textColor="#673AB7"
        android:textSize="20sp"
        android:textStyle="bold"/>

</LinearLayout>