<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.QuestionsActivity">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/questionTest"
            android:textSize="25sp"
            android:textStyle="normal"
            tools:text="What Country Does This Flag Belong To?"
            android:gravity="center" />
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            android:layout_marginTop="15dp"
            android:gravity="center">
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                style="?android:attr/progressBarStyleHorizontal"
                android:max="20"
                android:minHeight="50dp"
                android:indeterminate="false"
                tools:progress="7"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/trackPro"
                android:layout_weight="1"
                android:textSize="15sp"
                android:text="@string/_0_20"
                android:layout_marginStart="5dp"
                android:layout_gravity="center_vertical"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/opt1"
            android:textSize="20sp"
            android:textStyle="normal"
            android:text="@string/option_1"
            android:gravity="center"
            android:background="@drawable/optionborder"
            android:layout_marginTop="15dp"
            android:minHeight="50dp"
            android:textColor="#6F6F6F"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/opt2"
            android:textSize="20sp"
            android:textStyle="normal"
            android:text="@string/option_2"
            android:gravity="center"
            android:background="@drawable/optionborder"
            android:layout_marginTop="15dp"
            android:minHeight="50dp"
            android:textColor="#6F6F6F"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/opt3"
            android:textSize="20sp"
            android:textStyle="normal"
            android:text="@string/option_3"
            android:gravity="center"
            android:background="@drawable/optionborder"
            android:layout_marginTop="15dp"
            android:minHeight="50dp"
            android:textColor="#6F6F6F"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/opt4"
            android:textSize="20sp"
            android:textStyle="normal"
            android:text="@string/option_4"
            android:gravity="center"
            android:background="@drawable/optionborder"
            android:layout_marginTop="15dp"
            android:minHeight="50dp"
            android:textColor="#6F6F6F"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/check"
            android:text="@string/check"
            android:layout_marginTop="15dp"
            android:minHeight="50dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>